gcp_deployment/template_files/woz/woz_deployment_nginx-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: DEPLOYMENT_NAME
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DEPLOYMENT_NAME
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: woz-custom
  replicas: 1
  template:
    metadata:
      labels:
        app: DEPLOYMENT_NAME
        app.kubernetes.io/name: woz-custom
    spec:
      containers:
      - name: woz
        image: IMAGE_REPO/woz:latest
        #imagePullPolicy: Never
        imagePullPolicy: Always
        stdin: true
        ports:
          - containerPort: 80
